phase1-openshift-enterprise-k8s/day02/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotnet-demo
  labels:
    app.kubernetes.io/managed-by: manual
