phase1-openshift-enterprise-k8s/day02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  namespace: dotnet-demo
  labels:
    app: aspnetapp
spec:
  selector:
    app: aspnetapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
