phase1-openshift-enterprise-k8s/day02/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aspnetapp
  namespace: dotnet-demo
  labels:
    app: aspnetapp
spec:
  to:
    kind: Service
    name: aspnetapp
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
